# aa545

./: .gitignore  README-pic1.md  README.md  c1.py  config.py  config_langmuir_displacement.py  config_langmuir_moving.py  config_leapfrog_instability.py  config_two_beam_instability.py  configuration.py  data.py  data_dory_guest_harris.py  model.py  notes.md  pic1.md  pic1.py  plots.py  poisson.py  presentation-notes.md  presentation-questions.md  proj1.py  pyproject.toml  run_cyclotron.prof  run_cyclotron.py  run_dgh.prof  run_dory_guest_harris.py  run_langmuir_shm.py  run_leapfrog_instability.py  run_two_beam_instability.py  test.py  test_poisson.py  test_weighting.py  util.py  utils.py  vispy.py  weighting.py
fd1/: README.md  configuration.py  methods.py  models.py  plots.py  pyproject.toml  run_ftcs.py  utils.py
mhd1/: README.md  configuration.py  methods.py  models.py  plots.py  pyproject.toml  run_ftcs.py  run_mhd.py  run_screw_pinch.py  run_spheromak_equilibrium.py  test.py  utils.py
pic1/: README-pic1.md  config_default.py  config_langmuir_displacement.py  config_langmuir_moving.py  config_leapfrog_instability.py  configuration.py  data_dory_guest_harris.py  model.py  pic1.py  plots.py  poisson.py  pyproject.toml  requirements.txt  run_cyclotron.py  run_dory_guest_harris.py  run_langmuir_shm.py  run_leapfrog_instability.py  run_two_beam_instability.py  test.py  test2.py  test_model.py  test_poisson.py  test_weighting.py
