[tool.poetry]
name = "pic1"
version = "0.1.0"
description = "Coding project 1.1: One-dimensional force-free PIC modeling."
authors = ["Evan Bluhm <embluhm@uw.edu>"]

[tool.poetry.dependencies]
python = "^3.6,<3.10"
matplotlib = "^3.4.1"
numpy = "^1.20.2"
numba = "^0.53.1"
progressbar = "^2.5"

[tool.poetry.dev-dependencies]
debugpy = "^1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
