[tool.poetry]
name = "fd1"
version = "0.1.0"
description = "Coding project 2: Finite difference MHD modeling."
authors = ["Evan Bluhm <embluhm@uw.edu>"]

[tool.poetry.dependencies]
python = "^3.7,<3.9"
matplotlib = "^3.4.1"
numpy = "^1.20.2"
numba = "^0.53.1"
progressbar = "^2.5"
scipy = "^1.6.2"
tables = "^3.6.1"


[tool.poetry.dev-dependencies]
flake8 = "^3.9.1"
pytest = "^6.2.3"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
