[tool.poetry]
name = "pic1"
version = "0.1.0"
description = "Coding project 1.1: One-dimensional electrostatic PIC modeling."
authors = ["Evan Bluhm <embluhm@uw.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.12"
numba = "^0.56.4"
matplotlib = "^3.7.1"
progressbar = "^2.5"
scipy = "^1.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
